--- a/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
+++ b/src/main/resources/view/AddPeopleInRelayRunPopup.fxml
@@ -5,85 +5,122 @@
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="556.0" prefWidth="593.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lifehouse.raceth.gui.PeopleInRelayRunPopupController">
    <children>
-      <Label layoutX="41.0" prefHeight="124.0" prefWidth="345.0" text="Создание участника" textFill="#305ec1">
+      <Label layoutX="179.0" prefHeight="56.0" prefWidth="235.0" text="Создание участника" textFill="#305ec1">
          <font>
             <Font name="System Bold" size="23.0" />
          </font>
       </Label>
-      <Label layoutX="41.0" layoutY="90.0" text="Фамилия">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField fx:id="surname" layoutX="41.0" layoutY="113.0" prefHeight="31.0" prefWidth="227.0" />
       <Button fx:id="saveButt" layoutX="41.0" layoutY="493.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/AgreeButton.css" text="Сохранить" />
       <Button fx:id="cancelButt" layoutX="196.0" layoutY="493.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
-      <Label layoutX="41.0" layoutY="153.0" text="Имя">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField fx:id="name" layoutX="41.0" layoutY="178.0" prefHeight="31.0" prefWidth="227.0" />
-      <Label layoutX="41.0" layoutY="222.0" text="Отчество">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField fx:id="patronic" layoutX="41.0" layoutY="246.0" prefHeight="31.0" prefWidth="227.0" />
-      <Label layoutX="364.0" layoutY="153.0" text="Город">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField fx:id="city" layoutX="363.0" layoutY="178.0" prefHeight="31.0" prefWidth="181.0" />
-      <DatePicker fx:id="birth" editable="false" layoutX="363.0" layoutY="113.0" prefHeight="31.0" prefWidth="181.0" />
-      <Label layoutX="367.0" layoutY="90.0" text="Дата рождения">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="58.0" layoutY="290.0" text="Пол">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <RadioButton layoutX="94.0" layoutY="294.0" mnemonicParsing="false" text="М">
-         <toggleGroup>
-            <ToggleGroup fx:id="gender" />
-         </toggleGroup>
-      </RadioButton>
-      <RadioButton layoutX="144.0" layoutY="294.0" mnemonicParsing="false" text="Ж" toggleGroup="$gender" />
-      <Label layoutX="43.0" layoutY="322.0" text="Чип">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField fx:id="chip" layoutX="42.0" layoutY="347.0" prefHeight="31.0" prefWidth="227.0" />
-      <Button fx:id="saveButt1" layoutX="42.0" layoutY="390.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="227.0" stylesheets="@css/AgreeButton.css" text="Зачитать чип" />
-      <ComboBox fx:id="club" layoutX="363.0" layoutY="249.0" prefHeight="25.0" prefWidth="181.0" />
-      <Label layoutX="363.0" layoutY="222.0" text="Клуб">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="rank" layoutX="363.0" layoutY="315.0" prefHeight="25.0" prefWidth="181.0" />
-      <Label layoutX="361.0" layoutY="290.0" text="Разряд">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="364.0" layoutY="366.0" text="Стартовый номер">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <TextField fx:id="startNumber" layoutX="363.0" layoutY="393.0" prefHeight="31.0" prefWidth="181.0" />
+      <GridPane layoutX="42.0" layoutY="56.0" prefHeight="301.0" prefWidth="523.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="10.0" prefWidth="229.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="169.0" minWidth="10.0" prefWidth="77.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="228.0" minWidth="10.0" prefWidth="217.0" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="60.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="41.0" minHeight="0.0" prefHeight="7.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Фамилия">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="surname" prefHeight="31.0" prefWidth="227.0" GridPane.rowIndex="1" />
+            <Label text="Имя" GridPane.rowIndex="2">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="name" prefHeight="31.0" prefWidth="227.0" GridPane.rowIndex="3" />
+            <Label text="Отчество" GridPane.rowIndex="4">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="patronic" prefHeight="31.0" prefWidth="227.0" GridPane.rowIndex="5" />
+            <Label text="Пол" GridPane.rowIndex="6">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <RadioButton mnemonicParsing="false" text="М" translateX="50.0" GridPane.rowIndex="6">
+               <toggleGroup>
+                  <ToggleGroup fx:id="gender" />
+               </toggleGroup>
+            </RadioButton>
+            <Label text="Чип" GridPane.rowIndex="7">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="chip" prefHeight="31.0" prefWidth="227.0" translateY="2.0" GridPane.rowIndex="8" />
+            <RadioButton mnemonicParsing="false" text="Ж" toggleGroup="$gender" translateX="100.0" GridPane.rowIndex="6" />
+            <Label text="Дата рождения" GridPane.columnIndex="2">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <DatePicker fx:id="birth" editable="false" prefHeight="31.0" prefWidth="181.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+            <Label text="Город" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <TextField fx:id="city" prefHeight="31.0" prefWidth="211.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+            <Label text="Клуб" GridPane.columnIndex="2" GridPane.rowIndex="4">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="club" prefHeight="25.0" prefWidth="181.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+            <Label text="Разряд" GridPane.columnIndex="2" GridPane.rowIndex="6">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="rank" prefHeight="25.0" prefWidth="181.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+            <TextField fx:id="startNumber" prefHeight="31.0" prefWidth="181.0" GridPane.columnIndex="2" GridPane.rowIndex="10" />
+            <Label text="Стартовый номер" translateY="5.0" GridPane.columnIndex="2" GridPane.rowIndex="8">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Button fx:id="saveButt1" mnemonicParsing="false" onAction="#Saving" prefHeight="16.0" prefWidth="227.0" stylesheets="@css/AgreeButton.css" text="Зачитать чип" GridPane.rowIndex="10" />
+         </children>
+      </GridPane>
+      <TableView layoutX="43.0" layoutY="362.0" prefHeight="116.0" prefWidth="516.0">
+        <columns>
+          <TableColumn prefWidth="118.0" text="ФИО" />
+          <TableColumn prefWidth="53.0" text="Пол" />
+            <TableColumn prefWidth="102.0" text="Дата рождения" />
+            <TableColumn prefWidth="72.0" text="Город" />
+            <TableColumn prefWidth="79.0" text="Клуб" />
+            <TableColumn prefWidth="91.0" text="Разряд" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
