--- a/src/main/resources/view/RunPage.fxml
+++ b/src/main/resources/view/RunPage.fxml
@@ -7,8 +7,6 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -58,63 +56,39 @@
                   </GridPane>
                </children>
             </GridPane>
-            <GridPane GridPane.rowIndex="2">
+            <GridPane prefWidth="1053.0" GridPane.rowIndex="2">
                <columnConstraints>
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="34.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="818.6" minWidth="10.0" prefWidth="220.2000274658203" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="944.8" minWidth="10.0" prefWidth="689.7999725341797" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="147.39999389648438" minWidth="-Infinity" prefWidth="134.60000610351562" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="255.19998779296878" minWidth="-Infinity" prefWidth="137.59995117187503" />
+                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="231.60000915527343" minWidth="-Infinity" prefWidth="98.39999999999998" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="818.6" minWidth="10.0" prefWidth="149.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="944.8" minWidth="10.0" prefWidth="552.6000427246092" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="addButton" contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#AddRow" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.halignment="RIGHT" GridPane.valignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/icons/plus.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" stylesheets="@css/Buttons.css" text="Удалить" textAlignment="RIGHT" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <styleClass>
-                        <String fx:value="btn-image" />
-                        <String fx:value="btn-primary" />
-                     </styleClass></Button>
-                  <Button contentDisplay="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#RemoveRows" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/icons/minus.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <styleClass>
-                        <String fx:value="btn-image" />
+                        <String fx:value="btn" />
+                        <String fx:value="btn-common" />
                         <String fx:value="btn-danger" />
                      </styleClass>
                   </Button>
-                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#UpdateRow" stylesheets="@css/Buttons.css" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-                     <graphic>
-                        <ImageView fitHeight="12.0" fitWidth="12.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/icons/edit.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
+                  <Button alignment="CENTER" contentDisplay="CENTER" layoutX="79.0" layoutY="16.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#UpdateRow" stylesheets="@css/Buttons.css" text="Редактировать" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                      <styleClass>
-                        <String fx:value="btn-image" />
+                        <String fx:value="btn" />
                         <String fx:value="btn-warning" />
+                        <String fx:value="btn-common" />
                      </styleClass>
                   </Button>
-                  <Button fx:id="createCompretition_button" mnemonicParsing="false" onAction="#AddRun" stylesheets="@css/Buttons.css" text="Создать старт" textAlignment="CENTER" textFill="WHITE" GridPane.columnIndex="3">
+                  <Button fx:id="createCompretition_button" mnemonicParsing="false" onAction="#AddRun" stylesheets="@css/Buttons.css" text="Создать старт" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                      <styleClass>
                         <String fx:value="btn" />
-                        <String fx:value="btn-small" />
+                        <String fx:value="btn-common" />
                         <String fx:value="btn-primary" />
                      </styleClass>
                   </Button>
@@ -122,12 +96,12 @@
             </GridPane>
             <TableView fx:id="runTable" prefHeight="419.0" stylesheets="@css/table.css" GridPane.rowIndex="1">
                <columns>
-                  <TableColumn fx:id="namestartColumn" prefWidth="175.0" text="Название" reorderable="false"/>
-                  <TableColumn fx:id="categoryColumn" prefWidth="170.0" text="Категория" reorderable="false"/>
-                  <TableColumn fx:id="distanceColumn" prefWidth="175.0" text="Дистанция" reorderable="false"/>
-                  <TableColumn fx:id="starttimeColumn" prefWidth="175.0" text="Время старта" reorderable="false"/>
-                  <TableColumn fx:id="countlapsColumn" prefWidth="175.0" text="Кол-во кругов" reorderable="false"/>
-                  <TableColumn fx:id="compDayColumn" prefWidth="175.0" text="День соревнования" reorderable="false"/>
+                  <TableColumn fx:id="namestartColumn" prefWidth="175.0" reorderable="false" text="Название" />
+                  <TableColumn fx:id="categoryColumn" prefWidth="170.0" reorderable="false" text="Категория" />
+                  <TableColumn fx:id="distanceColumn" prefWidth="175.0" reorderable="false" text="Дистанция" />
+                  <TableColumn fx:id="starttimeColumn" prefWidth="175.0" reorderable="false" text="Время старта" />
+                  <TableColumn fx:id="countlapsColumn" prefWidth="175.0" reorderable="false" text="Кол-во кругов" />
+                  <TableColumn fx:id="compDayColumn" prefWidth="175.0" reorderable="false" text="День соревнования" />
                </columns>
             </TableView>
          </children>
