--- a/src/main/resources/view/RunCreateRunPopup.fxml
+++ b/src/main/resources/view/RunCreateRunPopup.fxml
@@ -21,8 +21,8 @@
             <Font size="16.0" />
          </font>
       </Label>
-      <Button fx:id="saveButt" layoutX="41.0" layoutY="363.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" styleClass="btn-success" stylesheets="@css/AgreeButton.css" text="Сохранить" />
-      <Button fx:id="cancelButt" layoutX="188.0" layoutY="363.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" stylesheets="@css/DisagreeButton.css" text="Отменить" />
+      <Button fx:id="saveButt" layoutX="41.0" layoutY="363.0" mnemonicParsing="false" onAction="#Saving" prefHeight="37.0" prefWidth="131.0" styleClass="btn-success" stylesheets="@css/Buttons.css" text="Сохранить" />
+      <Button fx:id="cancelButt" layoutX="188.0" layoutY="363.0" mnemonicParsing="false" onAction="#Cancel" prefHeight="37.0" prefWidth="131.0" styleClass="btn-danger" stylesheets="@css/Buttons.css" text="Отменить" />
       <Label layoutX="41.0" layoutY="230.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="Дистанция">
          <font>
             <Font size="16.0" />
@@ -54,5 +54,10 @@
             <String fx:value="week-number-cell" />
          </styleClass>
       </DatePicker>
+      <Label layoutX="304.0" layoutY="230.0" styleClass="label-regular" stylesheets="@css/AppLabel.css" text="День соревнования">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
