--- a/src/main/resources/view/CompetitionPage.fxml
+++ b/src/main/resources/view/CompetitionPage.fxml
@@ -178,11 +178,12 @@
                <TableView fx:id="competitionTable" layoutX="1.0" prefHeight="306.0" prefWidth="1070.0" stylesheets="@css/table.css">
                   <columns>
                      <TableColumn fx:id="cNameColumn" prefWidth="178.0" text="Название" />
-                     <TableColumn fx:id="cOrganizerColumn" prefWidth="178.0" text="Организатор" />
-                     <TableColumn fx:id="cLocationColumn" prefWidth="178.0" text="Место проведения" />
-                     <TableColumn fx:id="cDateColumn" prefWidth="178.0" text="Дата проведения" />
-                     <TableColumn fx:id="cMainJudgeColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="178.0" text="Главный судья" />
-                     <TableColumn fx:id="cMainSecretaryColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="178.0" text="Главный секретарь" />
+                     <TableColumn fx:id="cOrganizerColumn" prefWidth="154.9333953857422" text="Организатор" />
+                     <TableColumn fx:id="cLocationColumn" prefWidth="166.13323974609375" text="Место проведения" />
+                     <TableColumn fx:id="cFromDateColumn" prefWidth="135.73330688476562" text="Дата начала" />
+                     <TableColumn fx:id="cToDateColumn" prefWidth="131.4666748046875" text="Дата окончания" />
+                     <TableColumn fx:id="cMainJudgeColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="159.4666748046875" text="Главный судья" />
+                     <TableColumn fx:id="cMainSecretaryColumn" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefWidth="143.60003662109375" text="Главный секретарь" />
                   </columns>
                </TableView>
                <GridPane layoutX="10.0" layoutY="260.0" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="444.0">
